<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aixiaozi.xichexia.activitys.FindPassWordActivity">

    <include
        android:id="@+id/topBar"
        layout="@layout/top_bar" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topBar"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_120"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_2"
            android:text="手机号"
            android:textColor="@color/colorPrimary_5"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/userPhoneV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/dp_5"
            android:textColor="@color/black_33"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/clearPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/clear" />
    </LinearLayout>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/l1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/colorPrimary_5" />
    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:id="@+id/verifyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_2"
            android:text="验证码"
            android:textColor="@color/colorPrimary_5"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/verifyCodeV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/verif_code"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/dp_5"
            android:textColor="@color/black_33"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/verifyCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_32"
            android:layout_gravity="center"
            android:background="@drawable/login_btn_bg"
            android:text="获取验证码"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/white"
            android:src="@drawable/clear" />
    </LinearLayout>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/l2"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/colorPrimary_5" />
    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:id="@+id/userPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_2"
            android:text="密    码"
            android:textColor="@color/colorPrimary_5"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/userPasswordV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:maxLength="11"
            android:padding="@dimen/dp_5"
            android:textColor="@color/black_33"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/clearPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/clear" />
    </LinearLayout>
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/l3"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/colorPrimary_5" />
    <Button
        android:id="@+id/findPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l3"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/login_btn_bg"
        android:text="@string/find_password"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />
</RelativeLayout>
